added winner and loser alerts, gave correct user guess way to appear in correct space within array

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(../images/game-background.jpg);
+    background-image: url(../images/battleofbastards.jpg);
     -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
