--- a/assets/GOT_font/stylesheet.css
+++ b/assets/GOT_font/stylesheet.css
@@ -16,6 +16,15 @@ p {
     font-family: 'game_of_thronesregular';
     font-weight: lighter;
     text-align: center;
+    margin-top: 25px;
+    margin-bottom: 25px;
+}
+div {
+    font-family: 'game_of_thronesregular';
+    font-weight: lighter;
+    text-align: center;
+    margin-top: 25px;
+    margin-bottom: 25px;
 }
 h2 {
     font-family: 'game_of_thronesregular';
@@ -27,4 +36,9 @@ h4 {
     font-weight: lighter;
     text-align: center;
 
+}
+button{
+    font-family: 'game_of_thronesregular';
+    font-weight: lighter;
+    text-align: center;
 }
