--- a/assets/GOT_font/stylesheet.css
+++ b/assets/GOT_font/stylesheet.css
@@ -19,12 +19,21 @@ p {
     margin-top: 25px;
     margin-bottom: 25px;
 }
+#startByGuessingLetter {
+    font-family: 'game_of_thronesregular';
+    font-weight: lighter;
+    text-align: center;
+    margin-top: 25px;
+    margin-bottom: 25px;
+    font-size: 30px;
+}
 div {
     font-family: 'game_of_thronesregular';
     font-weight: lighter;
     text-align: center;
     margin-top: 25px;
     margin-bottom: 25px;
+    font-size: 15px;
 }
 h2 {
     font-family: 'game_of_thronesregular';
